--- a/packages/patch-package/tsconfig.build.json
+++ b/packages/patch-package/tsconfig.build.json
@@ -5,6 +5,9 @@
     "rootDir": "src",
     "baseUrl": "src",
     "noUnusedLocals": true,
-    "incremental": false
+    "sourceMap": false,
+    "declaration": false,
+    "incremental": false,
+    "tsBuildInfoFile": null
   }
 }
