--- a/packages/brownie/tsconfig.build.json
+++ b/packages/brownie/tsconfig.build.json
@@ -5,8 +5,9 @@
     "rootDir": "src",
     "baseUrl": "src",
     "noUnusedLocals": true,
-    "incremental": false,
     "sourceMap": false,
-    "declaration": false
+    "declaration": false,
+    "incremental": false,
+    "tsBuildInfoFile": null
   }
 }
