--- a/packages/deep-merge/tsconfig.json
+++ b/packages/deep-merge/tsconfig.json
@@ -1,15 +1,11 @@
 {
-  "extends": "../../tsconfig",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "src",
     "baseUrl": "src",
-    "strictNullChecks": false,
-    "skipLibCheck": true,
-    "paths": {
-      "@constant/*": ["constant/*"],
-      "@interface/*": ["interface/*"]
-    }
+    "tsBuildInfoFile": "tsconfig.tsbuildinfo",
+    "paths": {}
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
