--- a/packages/nestjs-graphql-typeorm-dataloader/package.json
+++ b/packages/nestjs-graphql-typeorm-dataloader/package.json
@@ -6,35 +6,40 @@
   "license": "ISC",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "repository": "https://gitlab.tailored-apps.com/ckilic/nx-test",
   "publishConfig": {
     "access": "public"
   },
-  "keywords": ["nestjs", "graphql", "typeorm", "dataloader", "data-loader"],
+  "keywords": [
+    "nestjs",
+    "graphql",
+    "typeorm",
+    "dataloader",
+    "data-loader"
+  ],
   "scripts": {
-    "prebuild": "rimraf tsconfig*.tsbuildinfo && rimraf dist/",
-    "build": "tsc -p tsconfig.build.json",
-    "postbuild": "tsconfig-replace-paths --project tsconfig.json",
-    "dev:build": "yarn prebuild && tsc -p tsconfig.json && yarn postbuild",
-    "dev:start": "yarn dev:build && tsc-watch --noClear --onSuccess \"yarn postbuild\"",
+    "build": "tsup-node",
+    "dev:start": "tsup-node --watch",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
     "docs:jsdoc": "typedoc src/index.ts --readme none",
     "docs:toc": "markdown-toc README.md --bullets='-' -i"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
-    }
-  },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
-    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
-  },
-  "engines": {
-    "node": ">=12.0.0"
+    "./**/*.{ts,js,tsx,jsx}": [
+      "prettier --loglevel warn --write",
+      "eslint --fix"
+    ],
+    "./**/*.{json,md}": [
+      "prettier --loglevel warn --write"
+    ]
   },
   "dependencies": {
     "apollo-server-plugin-base": "^3.5.1",
@@ -59,5 +64,8 @@
     "rimraf": "^3.0.2",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.41"
+  },
+  "engines": {
+    "node": ">= 16"
   }
 }
