--- a/packages/nestjs-util-microservices/tsconfig.json
+++ b/packages/nestjs-util-microservices/tsconfig.json
@@ -1,12 +1,10 @@
 {
-  "extends": "../../tsconfig",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "skipLibCheck": true,
-    "removeComments": false,
     "outDir": "./dist",
     "rootDir": "src",
     "baseUrl": "src",
-    "lib": ["DOM", "DOM.Iterable", "ES2020"],
+    "tsBuildInfoFile": "tsconfig.tsbuildinfo",
     "paths": {
       "@filter": ["filter/index"],
       "@filter/*": ["filter/*"],
