--- a/packages/nestjs-util-restful/package.json
+++ b/packages/nestjs-util-restful/package.json
@@ -4,28 +4,29 @@
   "description": "NestJS skeleton util library for restful applications.",
   "author": "Backend <backend@webundsoehne.com>",
   "license": "ISC",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "publishConfig": {
     "access": "public"
   },
+  "keywords": [
+    "nestjs",
+    "util"
+  ],
   "scripts": {
-    "prebuild": "rimraf tsconfig*.tsbuildinfo && rimraf dist/",
-    "build": "tsc -p tsconfig.build.json",
-    "postbuild": "tsconfig-replace-paths --project tsconfig.json",
-    "dev:build": "yarn prebuild && tsc -p tsconfig.json && yarn postbuild",
-    "dev:start": "yarn dev:build && tsc-watch --noClear --onSuccess \"yarn postbuild\"",
+    "build": "tsup-node",
+    "dev:start": "tsup-node --watch",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
     "docs:toc": "markdown-toc README.md --bullets='-' -i",
     "docs:jsdoc": "typedoc src/index.ts src/microservices.ts src/graphql.ts --readme none"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
-    }
   },
   "lint-staged": {
     "*.{ts,js,tsx,jsx}": [
@@ -36,10 +37,6 @@
       "prettier --loglevel warn --write"
     ]
   },
-  "keywords": [
-    "nestjs",
-    "util"
-  ],
   "peerDependencies": {
     "@nestjs/common": ">= 8 < 10",
     "@nestjs/core": ">= 8 < 10",
@@ -77,6 +74,6 @@
     "swagger-ui-express": "^4.1.5"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">= 16"
   }
 }
