--- a/packages/nx-builders/package.json
+++ b/packages/nx-builders/package.json
@@ -7,32 +7,35 @@
   "license": "ISC",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "publishConfig": {
     "access": "public"
   },
   "schematics": "./schematics.json",
   "builders": "./builders.json",
   "scripts": {
-    "prebuild": "rimraf tsconfig*.tsbuildinfo && rimraf dist/",
-    "build": "tsc -p tsconfig.build.json",
-    "postbuild": "tsconfig-replace-paths --project tsconfig.json && cpy --cwd=src --parents --dot '**/*.json' ../dist/",
-    "dev:build": "yarn prebuild && tsc -p tsconfig.json && tsconfig-replace-paths --project tsconfig.json",
-    "dev:start": "yarn dev:build && tsc-watch --noClear --onSuccess \"yarn postbuild\"",
+    "build": "tsup-node",
+    "postbuild": "cpy --cwd=src --parents --dot '**/*.json' ../dist/",
+    "dev:start": "tsup-node --watch",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
     "docs:toc": "markdown-toc README.md --bullets='-' -i",
     "docs:jsdoc": "typedoc src/index.ts --readme none"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
-    }
-  },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
-    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
+    "./**/*.{ts,js,tsx,jsx}": [
+      "prettier --loglevel warn --write",
+      "eslint --fix"
+    ],
+    "./**/*.{json,md}": [
+      "prettier --loglevel warn --write"
+    ]
   },
   "peerDependencies": {
     "@nrwl/workspace": "*",
@@ -43,9 +46,9 @@
     "typescript": ">= 3.9.0"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1302.0",
-    "@angular-devkit/core": "^13.2.0",
-    "@angular-devkit/schematics": "^13.2.0",
+    "@angular-devkit/architect": "^0.1302.2",
+    "@angular-devkit/core": "^13.2.2",
+    "@angular-devkit/schematics": "^13.2.2",
     "@nrwl/cli": "^13.7.1",
     "@webundsoehne/deep-merge": "*",
     "@webundsoehne/nx-tools": "*",
@@ -56,5 +59,8 @@
   "devDependencies": {
     "@types/execa": "^2.0.0",
     "@types/tsc-watch": "^4.2.0"
+  },
+  "engines": {
+    "node": ">= 16"
   }
 }
