--- a/packages/nx-nest/tsconfig.json
+++ b/packages/nx-nest/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
-    "skipLibCheck": true,
     "outDir": "./dist",
     "rootDir": "src",
     "baseUrl": "src",
+    "tsBuildInfoFile": "tsconfig.tsbuildinfo",
     "paths": {
       "@utils/*": ["utils/*"],
       "@integration/*": ["integration/*"],
