--- a/packages/nx-workspace/tsconfig.build.json
+++ b/packages/nx-workspace/tsconfig.build.json
@@ -5,6 +5,8 @@
     "rootDir": "src",
     "baseUrl": "src",
     "noUnusedLocals": true,
-    "incremental": false
+    "sourceMap": false,
+    "incremental": false,
+    "tsBuildInfoFile": null
   }
 }
