--- a/packages/brownie/templates/containers/db-postgresql/env.yml
+++ b/packages/brownie/templates/containers/db-postgresql/env.yml
@@ -1,4 +1,4 @@
 POSTGRES_USER: user
 POSTGRES_PASSWORD: secret
-POSTGRES_INITDB_MULTIPLE:
+POSTGRES_INITDB_MULTIPLE: db
 PGDATA: /var/lib/postgresql/data
