docs: update documentation

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "scripts:workspace:link": "./scripts/link-packages-to-workspace.sh link",
     "scripts:workspace:unlink": "./scripts/link-packages-to-workspace.sh unlink",
     "docs": "yarn run docs:readme && yarn run docs:jsdoc && yarn run docs:toc",
-    "docs:toc": "markdown-toc README.md --bullets='-' -i && yarn command --no-bail docs:toc",
-    "docs:jsdoc": "yarn command --no-bail docs:jsdoc",
-    "docs:readme": "yarn command --no-bail docs:readme"
+    "docs:toc": "markdown-toc README.md --bullets='-' -i && yarn command --no-bail --parallel docs:toc",
+    "docs:jsdoc": "yarn command --no-bail --parallel docs:jsdoc",
+    "docs:readme": "yarn command --no-bail --parallel docs:readme"
   },
   "workspaces": {
     "packages": [
