docs: docs requires the build step

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: node:16-alpine
 stages:
   - install
   - build
+  - docs
   - publish
 
 cache:
@@ -41,7 +42,7 @@ build:
     - node
 
 docs:
-  stage: build
+  stage: docs
   script:
     - yarn docs
   artifacts:
