fix: update implicit dependencies and fix missing dep bug for brownie

--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -72,6 +72,7 @@
     "tslib": "^2.2.0",
     "types": "^0.1.1",
     "update-notifier": "^5.1.0",
+    "rewire": "^6.0.0",
     "update-notifier2": "^1.0.6",
     "yaml": "^1.10.2"
   },
