--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -44,6 +44,7 @@
     "@webundsoehne/deep-merge": "*",
     "change-case": "^4.1.2",
     "colorette": "^2.0.16",
+    "winston": "^3.5.0",
     "diff": "^5.0.0",
     "eslint": "^8.8.0",
     "execa": "^5.1.1",
@@ -64,7 +65,8 @@
     "@types/eslint": "^8.4.1",
     "@types/figures": "^3.0.1",
     "@types/nunjucks": "^3.2.1",
-    "@types/prettier": "^2.4.3"
+    "@types/prettier": "^2.4.3",
+    "@types/winston": "^2.4.4"
   },
   "engines": {
     "node": ">= 16"
