--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -57,7 +57,9 @@
     "picomatch": "^2.3.1",
     "pidtree": "^0.5.0",
     "prettier": "^2.5.1",
-    "through": "^2.3.8"
+    "through": "^2.3.8",
+    "update-notifier2": "^1.0.6",
+    "update-notifier": "^5.1.0"
   },
   "devDependencies": {
     "@types/deepmerge": "^2.2.0",
