--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -73,6 +73,7 @@
     "types": "^0.1.1",
     "update-notifier": "^5.1.0",
     "rewire": "^6.0.0",
+    "update-notifier2": "^1.0.6",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
