--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -59,7 +59,8 @@
     "prettier": "^2.5.1",
     "through": "^2.3.8",
     "update-notifier2": "^1.0.6",
-    "update-notifier": "^5.1.0"
+    "update-notifier": "^5.1.0",
+    "globby": "^11.0.3"
   },
   "devDependencies": {
     "@types/deepmerge": "^2.2.0",
