--- a/packages/nx-workspace/package.json
+++ b/packages/nx-workspace/package.json
@@ -32,6 +32,7 @@
     ]
   },
   "dependencies": {
+    "@webundsoehne/deep-merge": "*",
     "@angular-devkit/core": "^13.2.2",
     "@angular-devkit/schematics": "^13.2.2",
     "@nrwl/devkit": "^13.7.1",
