--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -74,7 +74,8 @@
     "update-notifier": "^5.1.0",
     "rewire": "^6.0.0",
     "update-notifier2": "^1.0.6",
-    "yaml": "^1.10.2"
+    "yaml": "^1.10.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.10",
