--- a/packages/nestjs-util-graphql/package.json
+++ b/packages/nestjs-util-graphql/package.json
@@ -37,7 +37,8 @@
     "@nestjs/core": ">= 8 < 10",
     "@nestjs/graphql": ">= 8 < 10",
     "graphql": ">= 15 < 16",
-    "@webundsoehne/nestjs-util": ">= 5"
+    "@webundsoehne/nestjs-util": ">= 5",
+    "rxjs": ">= 7 < 8"
   },
   "devDependencies": {
     "@webundsoehne/nestjs-util": "*",
