--- a/packages/nx-builders/package.json
+++ b/packages/nx-builders/package.json
@@ -46,13 +46,17 @@
     "@nrwl/cli": "^13.7.1",
     "@webundsoehne/deep-merge": "*",
     "@webundsoehne/nx-tools": "*",
+    "fs-extra": "^10.0.0",
+    "@nrwl/devkit": "^13.7.1",
+    "dotenv": "^14.2.0",
     "delay": "^5.0.0",
     "execa": "^5.1.1",
     "tree-kill": "^1.2.2"
   },
   "devDependencies": {
     "@types/execa": "^2.0.0",
-    "@types/tsc-watch": "^4.2.0"
+    "@types/tsc-watch": "^4.2.0",
+    "@types/fs-extra": "^9.0.13"
   },
   "engines": {
     "node": ">= 16"
