--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -31,7 +31,8 @@
     ]
   },
   "peerDependencies": {
-    "@nrwl/workspace": "*"
+    "@nrwl/workspace": ">= 13",
+    "rxjs": ">= 7 < 8"
   },
   "dependencies": {
     "@angular-devkit/architect": "^0.1302.2",
@@ -60,13 +61,18 @@
     "through": "^2.3.8",
     "update-notifier2": "^1.0.6",
     "update-notifier": "^5.1.0",
-    "globby": "^11.0.3"
+    "globby": "^11.0.3",
+    "fs-extra": "^10.0.0",
+    "@nrwl/tao": "^13.4.6",
+    "rewire": "^6.0.0"
   },
   "devDependencies": {
     "@types/deepmerge": "^2.2.0",
     "@types/diff": "^5.0.2",
     "@types/eslint": "^8.4.1",
+    "@types/fs-extra": "^9.0.13",
     "@types/figures": "^3.0.1",
+    "@types/rewire": "^2.5.28",
     "@types/nunjucks": "^3.2.1",
     "@types/prettier": "^2.4.3",
     "@types/winston": "^2.4.4"
