--- a/packages/nx-workspace/package.json
+++ b/packages/nx-workspace/package.json
@@ -39,7 +39,8 @@
     "@nrwl/workspace": "^13.7.1",
     "@webundsoehne/nx-tools": "*",
     "enquirer": "^2.3.6",
-    "listr2": "^4.0.1"
+    "listr2": "^4.0.1",
+    "typescript": "^4.6.0-dev.20220203"
   },
   "engines": {
     "node": ">= 16"
