--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -31,7 +31,6 @@
     ]
   },
   "peerDependencies": {
-    "@nrwl/workspace": ">= 13",
     "rxjs": ">= 7 < 8"
   },
   "dependencies": {
@@ -40,6 +39,7 @@
     "@angular-devkit/schematics": "^13.2.2",
     "@nrwl/cli": "^13.7.1",
     "@nrwl/devkit": "^13.7.1",
+    "@nrwl/workspace": "^13.7.1",
     "@types/micromatch": "^4.0.2",
     "@types/picomatch": "^2.3.0",
     "@webundsoehne/deep-merge": "*",
