feat: dont lint whenever there is no prior configuration, fix builders install
fix #21, fix #22

--- a/packages/brownie/tsconfig.build.json
+++ b/packages/brownie/tsconfig.build.json
@@ -6,8 +6,6 @@
     "baseUrl": "src",
     "noUnusedLocals": true,
     "sourceMap": false,
-    "declaration": false,
-    "incremental": false,
-    "tsBuildInfoFile": null
+    "declaration": false
   }
 }
