--- a/packages/nestjs-util-microservices/tsconfig.build.json
+++ b/packages/nestjs-util-microservices/tsconfig.build.json
@@ -5,8 +5,6 @@
     "rootDir": "src",
     "baseUrl": "src",
     "noUnusedLocals": true,
-    "sourceMap": false,
-    "incremental": false,
-    "tsBuildInfoFile": null
+    "sourceMap": false
   }
 }
