--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@anatine/esbuild-decorators": "^0.2.18",
     "@cenk1cenk2/cz-cc": "^1.4.11",
+    "@types/node": "^17.0.15",
     "commitizen": "^4.2.4",
     "cpy-cli": "^3.1.1",
     "lerna": "^4.0.0",
@@ -55,7 +56,7 @@
     "tsconfig-replace-paths": "^0.0.11",
     "tsup": "^5.11.13",
     "typedoc": "^0.22.11",
-    "typedoc-plugin-markdown": "^3.11.12",
+    "typedoc-plugin-markdown": "^3.11.13",
     "typescript": "^4.6.0-dev.20220203"
   },
   "config": {
