--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -68,19 +68,18 @@
     "globby": "^11.0.3",
     "listr2": "^4.0.1",
     "nunjucks": "^3.2.3",
+    "rewire": "^6.0.0",
     "through": "^2.3.8",
     "tslib": "^2.2.0",
     "types": "^0.1.1",
     "update-notifier": "^5.1.0",
-    "rewire": "^6.0.0",
     "update-notifier2": "^1.0.6",
-    "yaml": "^1.10.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.10",
     "@types/fs-extra": "^9.0.13",
-    "@types/node": "^17.0.13",
     "@types/through": "^0.0.30",
     "@types/update-notifier": "^5.0.1",
     "source-map-support": "^0.5.21"
