--- a/packages/nestjs-util-restful/package.json
+++ b/packages/nestjs-util-restful/package.json
@@ -35,12 +35,12 @@
     "@nestjs/common": ">= 8 < 10",
     "@nestjs/core": ">= 8 < 10",
     "@nestjs/swagger": ">= 5 < 6",
+    "@webundsoehne/nestjs-util": ">= 5",
+    "express": ">= 4 < 5",
     "fastify": ">= 3",
     "fastify-swagger": ">= 4 < 5",
-    "express": ">= 4 < 5",
-    "swagger-ui-express": ">= 4 < 5",
-    "@webundsoehne/nestjs-util": ">= 5",
-    "rxjs": ">= 7 < 8"
+    "rxjs": ">= 7 < 8",
+    "swagger-ui-express": ">= 4 < 5"
   },
   "peerDependenciesMeta": {
     "fastify": {
@@ -57,21 +57,20 @@
     }
   },
   "dependencies": {
-    "moment": "^2.29.1",
-    "fs-extra": "^10.0.0"
+    "fs-extra": "^10.0.0",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
-    "@webundsoehne/nestjs-util": "*",
     "@nestjs/common": "^8.2.6",
     "@nestjs/core": "^8.2.6",
     "@nestjs/swagger": "^5.2.0",
     "@types/config": "^0.0.41",
-    "@types/node": "^17.0.13",
-    "@types/fs-extra": "^9.0.13",
-    "fastify": "^3.27.0",
-    "fastify-swagger": "^4.13.1",
-    "express": "^4.17.2",
     "@types/express": "^4.17.3",
+    "@types/fs-extra": "^9.0.13",
+    "@webundsoehne/nestjs-util": "*",
+    "express": "^4.17.2",
+    "fastify": "^3.27.0",
+    "fastify-swagger": "^4.14.0",
     "swagger-ui-express": "^4.1.5"
   },
   "engines": {
