--- a/packages/nx-builders/package.json
+++ b/packages/nx-builders/package.json
@@ -43,20 +43,20 @@
     "@angular-devkit/architect": "^0.1302.2",
     "@angular-devkit/core": "^13.2.2",
     "@angular-devkit/schematics": "^13.2.2",
-    "@nrwl/cli": "^13.7.1",
+    "@nrwl/cli": "^13.7.3",
+    "@nrwl/devkit": "^13.7.3",
     "@webundsoehne/deep-merge": "*",
     "@webundsoehne/nx-tools": "*",
-    "fs-extra": "^10.0.0",
-    "@nrwl/devkit": "^13.7.1",
-    "dotenv": "^14.2.0",
     "delay": "^5.0.0",
+    "dotenv": "^14.2.0",
     "execa": "^5.1.1",
+    "fs-extra": "^10.0.0",
     "tree-kill": "^1.2.2"
   },
   "devDependencies": {
     "@types/execa": "^2.0.0",
-    "@types/tsc-watch": "^4.2.0",
-    "@types/fs-extra": "^9.0.13"
+    "@types/fs-extra": "^9.0.13",
+    "@types/tsc-watch": "^4.2.0"
   },
   "engines": {
     "node": ">= 16"
