--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -37,44 +37,44 @@
     "@angular-devkit/architect": "^0.1302.2",
     "@angular-devkit/core": "^13.2.2",
     "@angular-devkit/schematics": "^13.2.2",
-    "@nrwl/cli": "^13.7.1",
-    "@nrwl/devkit": "^13.7.1",
-    "@nrwl/workspace": "^13.7.1",
+    "@nrwl/cli": "^13.7.3",
+    "@nrwl/devkit": "^13.7.3",
+    "@nrwl/tao": "^13.4.6",
+    "@nrwl/workspace": "^13.7.3",
     "@types/micromatch": "^4.0.2",
     "@types/picomatch": "^2.3.0",
     "@webundsoehne/deep-merge": "*",
     "change-case": "^4.1.2",
     "colorette": "^2.0.16",
-    "winston": "^3.5.0",
     "diff": "^5.0.0",
     "eslint": "^8.8.0",
     "execa": "^5.1.1",
     "figures": "^3.0.0",
     "find-up": "^5.0.0",
+    "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
+    "globby": "^11.0.3",
     "listr2": "^4.0.1",
     "micromatch": "^4.0.4",
     "nunjucks": "^3.2.3",
     "picomatch": "^2.3.1",
     "pidtree": "^0.5.0",
     "prettier": "^2.5.1",
+    "rewire": "^6.0.0",
     "through": "^2.3.8",
-    "update-notifier2": "^1.0.6",
     "update-notifier": "^5.1.0",
-    "globby": "^11.0.3",
-    "fs-extra": "^10.0.0",
-    "@nrwl/tao": "^13.4.6",
-    "rewire": "^6.0.0"
+    "update-notifier2": "^1.0.6",
+    "winston": "^3.5.0"
   },
   "devDependencies": {
     "@types/deepmerge": "^2.2.0",
     "@types/diff": "^5.0.2",
     "@types/eslint": "^8.4.1",
-    "@types/fs-extra": "^9.0.13",
     "@types/figures": "^3.0.1",
-    "@types/rewire": "^2.5.28",
+    "@types/fs-extra": "^9.0.13",
     "@types/nunjucks": "^3.2.1",
     "@types/prettier": "^2.4.3",
+    "@types/rewire": "^2.5.28",
     "@types/winston": "^2.4.4"
   },
   "engines": {
