--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@webundsoehne/deep-merge": "*",
-    "cli-color": "^2.0.1",
+    "colorette": "^2.0.16",
     "config": "^3.3.7",
     "fs-extra": "^10.0.0",
     "js-yaml": "^4.0.0",
