--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,6 +101,7 @@ sync:
     - git config --global user.email "$NPM_WS_EMAIL"
     - mkdir -p ~/.ssh/
     - echo "$GITHUB_DEPLOY_KEY" > ~/.ssh/id_rsa
+    - chmod 600 ~/.ssh/id_rsa
   script:
     - export GIT_SSH_COMMAND="ssh -o StrictHostKeyChecking=no"
     - git push git@github.com:tailoredmedia/backend-nx-skeleton.git HEAD:$CI_COMMIT_BRANCH
