--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,8 +104,7 @@ sync:
     - chmod 600 ~/.ssh/id_rsa
   script:
     - export GIT_SSH_COMMAND="ssh -o StrictHostKeyChecking=no"
-    - git remote add github git@github.com:tailoredmedia/backend-nx-skeleton.git
-    - git push -u github $CI_COMMIT_BRANCH
+    - git push git@github.com:tailoredmedia/backend-nx-skeleton.git HEAD:$CI_COMMIT_BRANCH
   only:
     - master
   tags:
