--- a/packages/nestjs-keycloak-seeder/package.json
+++ b/packages/nestjs-keycloak-seeder/package.json
@@ -6,7 +6,7 @@
   "license": "ISC",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "repository": "https://gitlab.tailored-apps.com/ckilic/nx-test",
+  "repository": "https://github.com/tailoredmedia/backend-nx-skeleton",
   "publishConfig": {
     "access": "public"
   },
