--- a/packages/nx-workspace/package.json
+++ b/packages/nx-workspace/package.json
@@ -2,7 +2,7 @@
   "name": "@webundsoehne-private/nx-workspace",
   "version": "1.0.0",
   "description": "Workspace plugin for Nx",
-  "repository": "https://gitlab.tailored-apps.com/ckilic/nx-test",
+  "repository": "https://github.com/tailoredmedia/backend-nx-skeleton",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "author": "Backend <backend@webundsoehne.com>",
