--- a/packages/nestjs-util-microservices/package.json
+++ b/packages/nestjs-util-microservices/package.json
@@ -2,6 +2,7 @@
   "name": "@webundsoehne/nestjs-util-microservices",
   "version": "1.0.0",
   "description": "NestJS skeleton util library for microservice applications.",
+  "repository": "https://github.com/tailoredmedia/backend-nx-skeleton",
   "author": "Backend <backend@webundsoehne.com>",
   "license": "ISC",
   "main": "./dist/index.js",
