--- a/packages/nestjs-util-restful/package.json
+++ b/packages/nestjs-util-restful/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "NestJS skeleton util library for restful applications.",
   "author": "Backend <backend@webundsoehne.com>",
+  "repository": "https://github.com/tailoredmedia/backend-nx-skeleton",
   "license": "ISC",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
